2003-03-13  Theodore A. Roth  <troth@openavr.org>

	* ser_posix.c, ser_win32.c, serial.h:
	Change baud from int to long to avoid a 16-bit int overflow.

2003-03-12  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (avrdude_SOURCES): Add avr910.[ch], serial.h and
	ser_posix.c files.
	* avr910.c: New file (stubs for avr910 serial programmer).
	* avr910.h: New file.
	* ser_posix.c: New file.
	* ser_win32.c: New file (just stubs for now).
	* serial.h: New file.
	* stk500.c: Move all the code for accessing the posix serial ports
	into ser_posix. This will make a native win32 port easier and allows
	the avr910 programmer to share the serial code.

2003-03-12  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Set version to 4.0.0cvs since we're done
	with 4.0.0 release.

2003-03-12
	* AVRDUDE 4.0.0 has been released (cvs release tag is "release_4_0_0").

2003-03-11  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am: Add CLEANFILES to remove all files from a make.
	* doc/Makefile.am: Ditto

2003-03-11  Theodore A. Roth  <troth@openavr.org>

	* windows/Makefile.am: Fix uninstall-local rule (forget the $$file
	part of the rm command).

2003-03-11  Theodore A. Roth  <troth@openavr.org>

	* AUTHORS: Updated.
	* CHANGELOG: Move contents to NEWS and remove file.
	* ChangeLog: All of the changes for this year.
	* ChangeLog-2001: All 2001 changes.
	* ChangeLog-2002: All 2002 changes.
	* Makefile.am (EXTRA_DIST): Remove CHANGELOG and and Change-200[12].
	* NEWS: Moved contents of CHANGELOG file here.
	* README: Add note pointing to savannah site.

2003-03-11  Eric Weddington <eric@umginc.net>

	* doc/avrdude.texi:
	Add Install and Documentation sections for Windows. Fix typo.

2003-03-10  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am: * Makefile.am (EXTRA_DIST): Add CHANGELOG.

2003-03-10  Brian S. Dean  <bsd@bsdhome.com>

	* stk500.c: Disable debugging printf.

	* configure.ac: Update version number in preparation for release.
